[gd_scene load_steps=21 format=3 uid="uid://db6j271mc1b87"]

[ext_resource type="Texture2D" uid="uid://dfb1wodvk2eb1" path="res://Sprite/UI/pause-sheet.png" id="1_8b1ni"]
[ext_resource type="Script" path="res://Script/deathScreen.gd" id="1_j1kif"]
[ext_resource type="Texture2D" uid="uid://chnm2ha7gucao" path="res://Sprite/UI/exitwhite.png" id="1_okfn0"]
[ext_resource type="Texture2D" uid="uid://d1bvn601jk3kl" path="res://Sprite/UI/exitRed.png" id="2_4ntgd"]
[ext_resource type="Texture2D" uid="uid://brshxhu36mq36" path="res://Sprite/UI/retry-sheet.png" id="2_pqagv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_djcq1"]
atlas = ExtResource("2_pqagv")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_snjh6"]
atlas = ExtResource("2_pqagv")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp5s3"]
atlas = ExtResource("2_pqagv")
region = Rect2(500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1doe"]
atlas = ExtResource("2_pqagv")
region = Rect2(750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6u3j"]
atlas = ExtResource("2_pqagv")
region = Rect2(1000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_t053e"]
atlas = ExtResource("2_pqagv")
region = Rect2(1250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_emwm4"]
atlas = ExtResource("2_pqagv")
region = Rect2(1500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ejwj"]
atlas = ExtResource("2_pqagv")
region = Rect2(1750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1wnh"]
atlas = ExtResource("2_pqagv")
region = Rect2(2000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_18cs3"]
atlas = ExtResource("2_pqagv")
region = Rect2(2250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps37y"]
atlas = ExtResource("2_pqagv")
region = Rect2(2500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jcle"]
atlas = ExtResource("2_pqagv")
region = Rect2(2750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5u44"]
atlas = ExtResource("2_pqagv")
region = Rect2(3000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0n6f"]
atlas = ExtResource("2_pqagv")
region = Rect2(3250, 0, 250, 250)

[sub_resource type="SpriteFrames" id="SpriteFrames_vm2r1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djcq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snjh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp5s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1doe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6u3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t053e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emwm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ejwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1wnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18cs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps37y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jcle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5u44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0n6f")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="death" type="Control" groups=["ui"]]
process_mode = 3
visible = false
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j1kif")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 0, 0.0156863, 0.705882)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -241.5
offset_top = -250.0
offset_right = 241.5
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath("../Button2")
shortcut_feedback = false
texture_normal = ExtResource("1_8b1ni")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/Button"]
position = Vector2(130, 129)
sprite_frames = SubResource("SpriteFrames_vm2r1")
frame = 13
frame_progress = 0.994953

[node name="Button2" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("1_okfn0")
texture_hover = ExtResource("2_4ntgd")
texture_focused = ExtResource("2_4ntgd")

[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_focus_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
